--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">news-app-2</string>
     <string name="download">Download</string>
+    <string name="txtHeadline">Headline</string>
 </resources>
