--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="news_api_error_text">News fetch failed</string>
     <string name="main_activity_name">Today\'s news</string>
     <string name="news_image">newsImage</string>
-    <string name="interfaceException">must implement interface</string>
+    <string name="interfaceException">%1$s must imeplement %2$s</string>
 </resources>
