Adding animation transitions between fragments, adding progress bar when waiting for data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="main_activity_name">Today\'s news</string>
     <string name="news_image">newsImage</string>
     <string name="interfaceException">%1$s must imeplement %2$s</string>
+    <string name="newsdetailloadingimage">newsDetailLoadingImage</string>
+    <string name="newslistloadingimage">newsListLoadingImage</string>
 </resources>
