Adding refresh button to action bar of news details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="interfaceException">%1$s must imeplement %2$s</string>
     <string name="newsdetailloadingimage">newsDetailLoadingImage</string>
     <string name="newslistloadingimage">newsListLoadingImage</string>
+    <string name="news_detail_refresh">news_detail_refresh</string>
 </resources>
